<resources>
    <string name="app_name">SmartBin</string>
    <string name="aide1"><b>Bienvenue dans Smart Bin, l\'application qui vous permet de trier vos déchets avec facilité!</b></string>
    <string name="aide2"> <u>Comment utiliser Smart Bin?</u></string>
    <string name="aide3">ÉTAPE 1 \nTout d\'abord, l\'écran d\'accueil possède deux boutons : \"Trier un déchet\" et \"Les types de déchets\" \n Le premier vous envoie sur une page où vous pourrez prendre une photo du déchet que vous désirez trier.</string>
    <string name="aide4">Étape 2 \nAprès avoir photographié le déchet, il vous suffit d\'appuyer sur \"Détecter objet\" pour que l\'algorithme reconnaisse le type de déchet présent sur l\'image et vous indique comment le trier. </string>
    <string name="aide5">Étape 3 \nLe deuxième bouton de l\'écran d\'accueil vous emmènera vers une liste de type de déchets. En cliquant sur l\'un d\'entre eux, une fenêtre s\'ouvrira pour vous donner de plus amples informations sur ce type de déchets.</string>
    <string name="aide6">Bienvenue dans Smart Bin, l\'application qui vous permet de trier vos déchets avec facilité!</string>
    <string name="aide7">Bienvenue dans Smart Bin, l\'application qui vous permet de trier vos déchets avec facilité!</string>
    <string name="aide8">Bienvenue dans Smart Bin, l\'application qui vous permet de trier vos déchets avec facilité!</string>
    <string name="aide9">Bienvenue dans Smart Bin, l\'application qui vous permet de trier vos déchets avec facilité!</string>
    <string name="trier">\"Trier un déchet\"</string>
    <string name="types">\"Les types de déchets\"</string>
</resources>
