<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b5e4fa"
    tools:context=".AideActivity">

    <TextView
        android:id="@+id/tvTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Aide"
        android:textAlignment="center"
        android:textColor="#ED7F10"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="404dp"
        android:layout_height="450dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitre"
        app:layout_constraintBottom_toTopOf="@+id/bRetour">

        <RelativeLayout
            android:layout_width="404dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:text="@string/aide1"
                android:textColor="#055ddb"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="320dp"
                android:layout_height="42dp"
                android:layout_below="@+id/tv1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="25dp"
                android:gravity="center"
                android:text="@string/aide2"
                android:textColor="#055ddb"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv2"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"

                android:layout_marginEnd="8dp"
                android:text="@string/aide3"
                android:textColor="#055ddb"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="165dp"
                android:layout_height="304dp"
                android:layout_below="@+id/tv2"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/rectangle_bleu"
                android:layout_marginBottom="11dp"
                android:layout_toEndOf="@+id/tv3"
                app:srcCompat="@drawable/ecran_dacceuil"
                tools:layout_editor_absoluteX="221dp"
                tools:layout_editor_absoluteY="221dp" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView3"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/imageView4"
                android:text="@string/aide4"
                android:textColor="#055ddb"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="165dp"
                android:layout_height="301dp"
                android:layout_below="@+id/tv3"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="11dp"
                android:background="@drawable/rectangle_bleu"
                app:srcCompat="@drawable/analyse_photo"
                tools:layout_editor_absoluteX="221dp"
                tools:layout_editor_absoluteY="221dp" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView4"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"

                android:text="@string/aide5"
                android:textColor="#055ddb"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="165dp"
                android:layout_height="305dp"
                android:layout_below="@+id/imageView4"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="11dp"
                android:layout_toEndOf="@+id/tv5"
                android:background="@drawable/rectangle_bleu"
                app:srcCompat="@drawable/info1"
                tools:layout_editor_absoluteX="175dp"
                tools:layout_editor_absoluteY="175dp" />

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/bRetour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rectangle_plein_orange"
        android:text="Retour"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />




</android.support.constraint.ConstraintLayout>